syntax = "proto3";

package user;

option go_package = "go-drive/proto/user";

import "google/protobuf/timestamp.proto";

// User service definition
service UserService {
  // Create a new user
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // Get user by ID
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // Update user information
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

  // Delete user (soft delete)
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

  // List users with pagination
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);

  // Verify user email
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);
}

// User message
message User {
  string id = 1;
  string first_name = 2;
  string surname = 3;
  string email = 4;
  string phone = 5;
  string country = 6;
  string region = 7;
  string city = 8;
  string type = 9;
  bool email_verified = 10;
  bool is_active = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

// CreateUser messages
message CreateUserRequest {
  string first_name = 1;
  string surname = 2;
  string email = 3;
  string phone = 4;
  string country = 5;
  string region = 6;
  string city = 7;
  string type = 8;
}

message CreateUserResponse {
  User user = 1;
  string message = 2;
}

// GetUser messages
message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

// UpdateUser messages
message UpdateUserRequest {
  string id = 1;
  optional string first_name = 2;
  optional string surname = 3;
  optional string email = 4;
  optional string phone = 5;
  optional string country = 6;
  optional string region = 7;
  optional string city = 8;
  optional string type = 9;
}

message UpdateUserResponse {
  User user = 1;
  string message = 2;
}

// DeleteUser messages
message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  string message = 1;
}

// ListUsers messages
message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  optional string filter_type = 3;
  optional bool filter_active = 4;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// VerifyEmail messages
message VerifyEmailRequest {
  string id = 1;
  string verification_token = 2;
}

message VerifyEmailResponse {
  bool success = 1;
  string message = 2;
}
